<resources>
	<string name="app_name">Sugoi Nihongo</string>
	<string name="general_words">Words</string>
	<string name="general_word">Word</string>
	<string name="general_sentences">Sentences</string>
	<string name="general_sentence">Sentence</string>
	<string name="general_grammar_rules">Grammar rules</string>
	<string name="general_grammar_rule">Grammar rule</string>
	<string name="word_word_id">Word Id</string>
	<string name="model_original">Original</string>
	<string name="model_translation">Translation</string>
	<string name="model_transcription">Transcription</string>
	<string name="word_notes">Notes</string>
	<string name="sentence_sentence_id">Sentence Id</string>
	<string name="grammar_rule_grammar_rule_id">Grammar rule Id</string>
	<string name="grammar_rule_header">Header</string>
	<string name="grammar_rule_body">Body</string>
	<string name="word_add_word">Add word</string>
	<string name="word_edit_word">Edit word</string>
	<string name="sentence_add_sentence">Add sentence</string>
	<string name="sentence_edit_sentence">Edit sentence</string>
	<string name="grammar_rule_add_grammar_rule">Add grammar rule</string>
	<string name="grammar_rule_edit_grammar_rule">Edit grammar rule</string>
	<string name="validation_not_blank">Input required</string>
	<string name="validation_greater_than">Value must be greater than %1$s</string>
	<string name="validation_min_length">Length must be greater than or equal to %1$s</string>
	<string name="validation_kana_or_kanji">Only kana or kanji allowed</string>
	<string name="validation_kana">Only kana allowed</string>
	<string name="validation_max_length">Maximum length exceeded</string>
	<string name="word_mark">Mark</string>
	<string name="word_last_accessed">Last accessed</string>
	<string name="general_never">Never</string>
	<string name="settings_include_in_quiz">Include in quiz</string>
	<string name="word_available_in_quiz">Word is available for testing in the quizzes</string>
	<string name="word_in_favourites">In favourites</string>
	<string name="word_store_special_words">Store special words for quick access</string>
	<string name="general_correct">Correct</string>
	<string name="general_wrong">Wrong</string>
	<string name="word_accuracy">Accuracy</string>
	<string name="word_properties">Word properties</string>
	<string name="general_settings">Settings</string>
	<string name="word_quiz">Word Quiz</string>
	<string name="general_user_interface">User interface</string>
	<string name="general_backup">Backup</string>
	<string name="general_about_app">About App</string>
	<string name="word_settings_manage_quiz">Manage quiz flow and marks</string>
	<string name="settings_manage_ui_elements">Manage interface elements</string>
	<string name="settings_manage_backups">Manage data backup</string>
	<string name="settings_app_version">Version: %1$s</string>
	<string name="settings_version_as_of">%1$s as of %2$s</string>
	<string name="general_version">Version</string>
	<string name="settings_study">Study</string>
	<string name="settings_technical">Technical</string>
	<string name="general_application">Application</string>
	<string name="settings_word_quiz">Word quiz settings</string>
	<string name="settings_word_quiz_question_count">Number of questions</string>
	<string name="settings_word_quiz_min_option_count">Minimum number of options</string>
	<string name="settings_word_quiz_max_option_count">Maximum number of options</string>
	<string name="word_show_transcription">Show transcription</string>
	<string name="settings_word_quiz_kana_is_shown">Kana will be shown along with kanji</string>
	<string name="settings_word_quiz_decrement_mark_after_days">Decrement mark after days without quiz</string>
	<string name="settings_word_quiz_decrement_mark">Decrement mark</string>
	<string name="settings_word_quiz_mark_is_decremented">If a word is not accessed for a specified period of time, its mark is decremented</string>
	<string name="settings_ui_show_entry_id">Show entry ID</string>
	<string name="settings_ui_entry_id_is_shown">Entry ID (e.g. word, sentence or grammar rule) will be shown in the detail view</string>
	<string name="settings_ui_show_word_mark_table">Show table with marks of words</string>
	<string name="settings_ui_word_mark_table_is_shown">Grouping of marks earned in word quizzes will be shown</string>
	<string name="settings_ui">User interface settings</string>
	<string name="settings_backup_create_backups">Create backups</string>
	<string name="settings_backup_backup_data">Automagically backup your data (e.g. words, sentences, grammar rules and exercises)</string>
	<string name="settings_backup_number_of_files">Number of files to store</string>
	<string name="settings_backup_creation_frequency">Creation frequency (days)</string>
	<string name="settings_backup">Backup settings</string>
	<string name="general_website">Website</string>
	<string name="settings_dev_credits">Development credits</string>
	<string name="settings_app_summary">App summary</string>
	<string name="settings_visit_app_website">Visit the app official website</string>
	<string name="settings_third_party_dev">Third party resources used in development</string>
	<string name="general_resources">Resources</string>
	<string name="settings_app_intention_description">Short description of what the app can be used for</string>
	<string name="settings_designed_and_developed_by">Designed and developed by\nMihails Kuzmins</string>
	<string name="licence_attribution_apache2_paragraph1" translatable="false">Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at</string>
	<string name="licence_attribution_apache2_paragraph2" translatable="false">Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
	<string name="settings_third_party_libraries">Third party libraries</string>
	<string name="word_quiz_select_type">Select quiz type</string>
	<string name="word_quiz_find_word">Find word</string>
	<string name="word_quiz_recognise_word">Recognise word</string>
	<string name="word_quiz_cannot_start_quiz">Cannot start the quiz because the number of words is less than the maximum number of quiz options: %1$d</string>
	<string name="settings_refer_to_settings">Please refer to settings: %1$s</string>
	<string name="word_quiz_list_of_words">List of words</string>
	<string name="word_quiz_cannot_start_list_of_words">Cannot show the list of words because there are no items</string>
	<string name="general_total">Total</string>
	<string name="general_mark_summary">Mark summary</string>
	<string name="word_or_add_more_words">Or add more words</string>
	<string name="general_count">Count</string>
	<string name="general_multiple_choice_quiz">Multiple choice quiz</string>
	<string name="general_score">Score</string>
	<string name="general_mistakes">Mistakes</string>
	<string name="general_submitted">Submitted: %1$s</string>
	<string name="word_quiz_results">Quiz results</string>
	<string name="general_tap_twice_to_exit">Tap twice to finish</string>
	<string name="word_hide_transcription">Hide transcription</string>
	<string name="general_search">Search</string>
	<string name="general_information">Information</string>
	<string name="settings_local_backups">Local backups</string>
	<string name="general_none">None</string>
	<string name="settings_last_backup_date">Last backup date</string>
	<string name="general_share_file">Share file</string>
	<string name="general_no_results_found">No results found</string>
	<string name="word_favourites">Word favourites</string>
	<string name="general_add_to_favourites">Add to favourites</string>
	<string name="general_remove_from_favourites">Remove from favourites</string>
	<string name="general_copied_to_clipboard">Copied to clipboard: \"%1$s\"</string>
	<string name="general_error">Error</string>
	<string name="general_attention">Attention</string>
	<string name="word_the_same_word_already_exists">Word with the same original text already exists: \"%1$s\"</string>
	<string name="sentence_the_same_sentence_already_exists">Sentence with the same original text already exists: \"%1$s\"</string>
	<string name="validation_invalid_character_encountered">Invalid character encountered: \"%1$s\"</string>
	<string name="auth_sign_in">Sign in</string>
	<string name="auth_sign_up">Sign up</string>
	<string name="auth_sign_out">Sign out</string>
	<string name="auth_email">E-mail</string>
	<string name="auth_password">Password</string>
	<string name="auth_current_password">Current password</string>
	<string name="auth_new_password">New password</string>
	<string name="auth_confirm_new_password">Confirm new password</string>
	<string name="auth_confirm_password">Confirm password</string>
	<string name="auth_passwords_must_be_equal">Passwords must be equal</string>
	<string name="auth_error_server_not_reachable">Could not reach the server</string>
	<string name="auth_error_invalid_email">E-mail address is invalid</string>
	<string name="auth_error_user_not_found">E-mail you have entered does not match any account</string>
	<string name="auth_error_unknown_error">Unknown error</string>
	<string name="auth_error_user_already_exists">Another user with the same e-mail already exists</string>
	<string name="auth_error_incorrect_password">Password is incorrect</string>
	<string name="auth_error_email_not_verified">E-mail address is not verified</string>
	<string name="auth_verification_has_been_sent">Verification e-mail has been sent to %1$s</string>
	<string name="auth_sign_up_successful">Sign up successful</string>
	<string name="auth_forgot_password">Forgot your password?</string>
	<string name="auth_resend_verification_email">Resend verification</string>
	<string name="auth_password_reset_has_been_sent">Password reset has been sent to %1$s</string>
	<string name="auth_account">Account</string>
	<string name="settings_personal_information">Personal information</string>
	<string name="settings_auth_change_password">Change password</string>
	<string name="settings_auth_delete_account">Delete account</string>
	<string name="settings_auth_delete_account_confirmation">Do you REALLY want to delete your account?</string>
	<string name="settings_auth_delete_account_warning">Warning: All your data will be deleted from the server</string>
	<string name="settings_auth_delete_account_credentials_request">In order to confirm deletion of your account, please enter credentials</string>
	<string name="general_delete">Delete</string>
	<string name="word_delete_confirmation">Do you want to delete the word?</string>
	<string name="sentence_delete_confirmation">Do you want to delete the sentence?</string>
	<string name="grammar_rule_delete_confirmation">Do you want to delete the grammar rule? Warning: all related grammar exercises will be deleted as well</string>
	<string name="auth_error_email_already_verified">E-mail address is already verified</string>
	<string name="auth_error_not_authenticated">You are not authenticated</string>
	<string name="settings_dark_mode">Dark mode</string>
	<string name="settings_set_dark_mode_for_application">Enable dark mode throughout the application</string>
	<string name="validation_kana_and_kanji_not_allowed">Kana and kanji not allowed</string>
	<string name="study_show_result_on_exit">Show result on exit</string>
	<string name="word_quiz_enable_disable_result_on_exit">Enable or disable showing the results when exiting the word quiz</string>
	<string name="word_study_history">Quiz history</string>
</resources>
